# utils_h

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1
.github/workflows/: main.yaml
src/test/: app_exception_test.cpp  bit_cast_test.cpp  circular_buffer_test.cpp  is_string_literal_test.cpp  non_copyable_and_non_movable_test.cpp  non_copyable_test.cpp  precompiled_header.h  string_conversion_test.cpp  struct_aliasing_disable_test.cpp
src/test/concurrency/: dispatcher_test.cpp  interruptible_condition_variable_test.cpp  lock_guard_test.cpp  observable_atomic_variable_test.cpp  one_shot_timer_test.cpp  waiting_queue_test.cpp  watchdog_test.cpp
src/test/concurrency/utils/: time_passed_method.h
src/test/embedded/: snprintf_test.cpp  static_string_test.cpp
src/test/logging/: assert_with_message_test.cpp  log_stream_test.cpp  scoped_log_test.cpp
src/test/test_utils/: time_passed.h
src/test/windows/: get_last_error_test.cpp  scoped_handle_test.cpp
src/utils_h/: app_exception.h  bit_cast.h  circular_buffer.h  non_copyable.h  non_copyable_and_non_movable.h  preprocessor.h  string_conversion.h  struct_aliasing_disable.h  type_traits.h
src/utils_h/concurrency/: dispatcher.h  interruptible_condition_variable.h  lock_guard.h  observable_atomic_variable.h  one_shot_timer.h  waiting_queue.h  watchdog.h
src/utils_h/embedded/: snprintf.h  static_string.h
src/utils_h/logging/: assert_with_message.h  log_stream.h  scoped_log.h
src/utils_h/windows/: get_last_error.h  scoped_handle.h
tools/cmake/: catch2_lib.cmake  compiler_options.cmake  doctest_lib.cmake
